--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,20 +8,92 @@
         <p id="name">Al Miller</p>
         <p id="subtitle">Software engineer passionate about holistic sustainability.</p>
     </div>
+    <!-- Trigger/Open The Modal -->
+    <!-- <button id="myBtn">Open Modal</button> -->
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>Some text in the Modal..</p>
+            <p>
+                Always seeking ways to maximize impact working in collaborative environments on meaningful problems.
+            </p>
+            <ul>
+                <li>Distributed systems<span>AWS Cloud Certified</span></li>
+                <li>Geographical Information Systems<span>PostGIS, Postgres, Esri ArcGIS</span></li>
+                <li>Database architecture and manipulation<span>SQL, NoSQL</span></li>
+                <li>VCS and CI/CD<span>git, Hg, CircleCI, AWS CodeDeploy</span></li>
+                <li>5 years Python experience<span>Python scripting for web-crawling/headless navigation (Selenium),</span>
+                </li>
+                <li>2 years experience<span>Python scripting for web-crawling/headless navigation (Selenium),</span></li>
+                <li>Machine learning and Natural Language Processing are hobbies<span>Developed a LVSM classifier and
+                        imbalanced learning set for ESA.</span></li>
+                <li>React <span>check out <a href="https://oursourdough.com/">oursourdough.com</a></span></li>
+                <li>SDLC, Agile methods, and VCS<span>Worked in small-to-large teams on fast-paced technical projects</span>
+                </li>
+                <li>Management consulting experience<span>Currently at a boutique technical consulting firm consulting on
+                        large capital project schedule and risk for the Department of Energy and National Science
+                        Foundation.</span></li>
+                <li>A multi-disciplinary technical background<span>Developed expertise in Computational Fluid Dynamics and
+                        statistics and Monte Carlo risk analysis. Studied Mechanical Engineering and Philosophy in
+                        University</span></li>
+                <li>...and a love of nature!<span>Through hiked the Appalachian and Pacific Crest Trails solo (Summers of
+                        '17 and '18, respectively).</span></li>
+            </ul>
+            <p>Please see my <a href="../static/assets/resume/resume_am.pdf" download="resume_am">resume</a> or reach out to
+                learn more. Look forward to connecting.</p>
+        </div>
+    </div>
+
+    <!-- <div class="landing_about">
+        <p>
+            Always seeking ways to maximize impact working in collaborative environments on meaningful problems.
+        </p>
+        <ul>
+            <li>Distributed systems<span>AWS Cloud Certified</span></li>
+            <li>Geographical Information Systems<span>PostGIS, Postgres, Esri ArcGIS</span></li>
+            <li>Database architecture and manipulation<span>SQL, NoSQL</span></li>
+            <li>VCS and CI/CD<span>git, Hg, CircleCI, AWS CodeDeploy</span></li>
+            <li>5 years Python experience<span>Python scripting for web-crawling/headless navigation (Selenium),</span>
+            </li>
+            <li>2 years experience<span>Python scripting for web-crawling/headless navigation (Selenium),</span></li>
+            <li>Machine learning and Natural Language Processing are hobbies<span>Developed a LVSM classifier and
+                    imbalanced learning set for ESA.</span></li>
+            <li>React <span>check out <a href="https://oursourdough.com/">oursourdough.com</a></span></li>
+            <li>SDLC, Agile methods, and VCS<span>Worked in small-to-large teams on fast-paced technical projects</span>
+            </li>
+            <li>Management consulting experience<span>Currently at a boutique technical consulting firm consulting on
+                    large capital project schedule and risk for the Department of Energy and National Science
+                    Foundation.</span></li>
+            <li>A multi-disciplinary technical background<span>Developed expertise in Computational Fluid Dynamics and
+                    statistics and Monte Carlo risk analysis. Studied Mechanical Engineering and Philosophy in
+                    University</span></li>
+            <li>...and a love of nature!<span>Through hiked the Appalachian and Pacific Crest Trails solo (Summers of
+                    '17 and '18, respectively).</span></li>
+        </ul>
+        <p>Please see my <a href="../static/assets/resume/resume_am.pdf" download="resume_am">resume</a> or reach out to
+            learn more. Look forward to connecting.</p>
+    </div> -->
     <div class="landing_contact_links">
         <div class="contact_link">
+            <!-- <button id="myBtn"> -->
+                    <i id="myBtn" class="far fa-user-circle icon"></i>
+            <!-- </button> -->
+        </div>
+        <div class="contact_link">
             <a href="https://www.linkedin.com/in/al-miller/">
-                <i class="fa fa-linkedin icon"></i>
+                <i class="fab fa-linkedin-in icon"></i>
             </a>
         </div>
         <div class="contact_link">
             <a href="https://www.github.com/ANMillerIII/">
-                <i class="fa fa-github icon"></i>
+                <i class="fab fa-github icon"></i>
             </a>
         </div>
         <div class="contact_link">
             <a href="../static/assets/resume/resume_am.pdf" download="resume_am">
-                <i class="fa fa-file-pdf-o icon"></i>
+                <i class="far fa-file-pdf-o icon"></i>
             </a>
         </div>
         <div class="contact_link">
@@ -31,4 +103,4 @@
         </div>
     </div>
 </div>
-{% endblock %}
+{% endblock %}"
