--- a/app/static/css/style copy 3.css
+++ b/app/static/css/style copy 3.css
@@ -2,13 +2,13 @@
 
 html, body, .content, .sidebar {
   font-family: Garamond !important;
-  font-size: 12px;
   background-color: #ffffff !important;
+  font-size: 12px;
 }
 
 /* Hide scrollbar */
 
-html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar, .sidebar::-webkit-scrollbar, .bottom_bar::-webkit-scrollbar {
+html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar, .sidebar::-webkit-scrollbar {
   display: none;
 }
 
@@ -60,8 +60,6 @@ h3 {
   position: relative;
 }
 
-
-
 .landing_links {
   margin-left: 300px !important;
   font-size: 12px !important;
@@ -93,7 +91,6 @@ h3 {
   min-height: 900px;
   justify-content: center;
   text-align: center;
-  font-family: minerva modern;
   color: rgb(36, 20, 0) !important;
 }
 
@@ -113,7 +110,6 @@ h3 {
   margin-left: -80%;
   margin-top: -45px;
 }
-
 
 .fade_in_page {
   animation: fadeIn ease 1s;
@@ -172,6 +168,7 @@ h3 {
   text-align: center;
   margin: 50px;
 }
+
 .thought_heading {
   margin-top: 10%;
   margin-left: 50%;
