--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,82 +4,17 @@
 {% endblock %}
 {% block content %}
 <div class="fade_in_page landing_grid_container">
+
+    <!-- Heading -->
     <div class="landing_heading ">
-        <p id="name">Al Miller</p>
-        <p id="subtitle">Software engineer passionate about holistic sustainability.</p>
-    </div>
-    <!-- Trigger/Open The Modal -->
-    <!-- <button id="myBtn">Open Modal</button> -->
-    <!-- The Modal -->
-    <div id="myModal" class="modal">
-        <!-- Modal content -->
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <p>Some text in the Modal..</p>
-            <p>
-                Always seeking ways to maximize impact working in collaborative environments on meaningful problems.
-            </p>
-            <ul>
-                <li>Distributed systems<span>AWS Cloud Certified</span></li>
-                <li>Geographical Information Systems<span>PostGIS, Postgres, Esri ArcGIS</span></li>
-                <li>Database architecture and manipulation<span>SQL, NoSQL</span></li>
-                <li>VCS and CI/CD<span>git, Hg, CircleCI, AWS CodeDeploy</span></li>
-                <li>5 years Python experience<span>Python scripting for web-crawling/headless navigation (Selenium),</span>
-                </li>
-                <li>2 years experience<span>Python scripting for web-crawling/headless navigation (Selenium),</span></li>
-                <li>Machine learning and Natural Language Processing are hobbies<span>Developed a LVSM classifier and
-                        imbalanced learning set for ESA.</span></li>
-                <li>React <span>check out <a href="https://oursourdough.com/">oursourdough.com</a></span></li>
-                <li>SDLC, Agile methods, and VCS<span>Worked in small-to-large teams on fast-paced technical projects</span>
-                </li>
-                <li>Management consulting experience<span>Currently at a boutique technical consulting firm consulting on
-                        large capital project schedule and risk for the Department of Energy and National Science
-                        Foundation.</span></li>
-                <li>A multi-disciplinary technical background<span>Developed expertise in Computational Fluid Dynamics and
-                        statistics and Monte Carlo risk analysis. Studied Mechanical Engineering and Philosophy in
-                        University</span></li>
-                <li>...and a love of nature!<span>Through hiked the Appalachian and Pacific Crest Trails solo (Summers of
-                        '17 and '18, respectively).</span></li>
-            </ul>
-            <p>Please see my <a href="../static/assets/resume/resume_am.pdf" download="resume_am">resume</a> or reach out to
-                learn more. Look forward to connecting.</p>
-        </div>
+        <p id="name">Al Miller III</p>
+        <p id="subtitle"></p>
     </div>
 
-    <!-- <div class="landing_about">
-        <p>
-            Always seeking ways to maximize impact working in collaborative environments on meaningful problems.
-        </p>
-        <ul>
-            <li>Distributed systems<span>AWS Cloud Certified</span></li>
-            <li>Geographical Information Systems<span>PostGIS, Postgres, Esri ArcGIS</span></li>
-            <li>Database architecture and manipulation<span>SQL, NoSQL</span></li>
-            <li>VCS and CI/CD<span>git, Hg, CircleCI, AWS CodeDeploy</span></li>
-            <li>5 years Python experience<span>Python scripting for web-crawling/headless navigation (Selenium),</span>
-            </li>
-            <li>2 years experience<span>Python scripting for web-crawling/headless navigation (Selenium),</span></li>
-            <li>Machine learning and Natural Language Processing are hobbies<span>Developed a LVSM classifier and
-                    imbalanced learning set for ESA.</span></li>
-            <li>React <span>check out <a href="https://oursourdough.com/">oursourdough.com</a></span></li>
-            <li>SDLC, Agile methods, and VCS<span>Worked in small-to-large teams on fast-paced technical projects</span>
-            </li>
-            <li>Management consulting experience<span>Currently at a boutique technical consulting firm consulting on
-                    large capital project schedule and risk for the Department of Energy and National Science
-                    Foundation.</span></li>
-            <li>A multi-disciplinary technical background<span>Developed expertise in Computational Fluid Dynamics and
-                    statistics and Monte Carlo risk analysis. Studied Mechanical Engineering and Philosophy in
-                    University</span></li>
-            <li>...and a love of nature!<span>Through hiked the Appalachian and Pacific Crest Trails solo (Summers of
-                    '17 and '18, respectively).</span></li>
-        </ul>
-        <p>Please see my <a href="../static/assets/resume/resume_am.pdf" download="resume_am">resume</a> or reach out to
-            learn more. Look forward to connecting.</p>
-    </div> -->
+    <!-- Contact links -->
     <div class="landing_contact_links">
         <div class="contact_link">
-            <!-- <button id="myBtn"> -->
-                    <i id="myBtn" class="far fa-user-circle icon"></i>
-            <!-- </button> -->
+            <i id="modalClick" class="far fa-user-circle icon"></i>
         </div>
         <div class="contact_link">
             <a href="https://www.linkedin.com/in/al-miller/">
@@ -100,6 +35,94 @@
             <a href="mailto:albert.miller@uconn.edu">
                 <i class="material-icons icon">&#xe0e1;</i>
             </a>
+        </div>
+    </div>
+
+    <!-- About Al modal -->
+    <div id="aboutModal" class="modal">
+        <div class="modalContent">
+            <span class="closeModal">&times;</span>
+            <div class="landing_about">
+                <div class="landing_about_heading">
+                    <p>
+                        Al is a software engineer passionate about all things at the intersection of technology and
+                        sustainability. A few of his more recent projects and competencies are noted below.
+                    </p>
+                    <p>
+                        Do please feel free to <a class="link" href="mailto:albert.miller@uconn.edu"><span>reach
+                                out.</span></a>
+                    </p>
+                </div>
+                <div class="landing_about_item">
+                    <a class="link" href="https://github.com/ANMillerIII">
+                        <h3><span>Cloud & Distributed Systems</span></h3>
+                    </a>
+                    <i>2 years experience</i>
+                    <p><i>(In progress)</i> AWS Cloud Developer Certified - Associates (2020). Demonstrated
+                        understanding of cloud best-practices and how to go from an idea to a widely distributed
+                        product.</p>
+                    <p>Particular experience in AWS Lambda, EC2, DynamoDB, Amplify, CloudFront, and IAM.</p>
+                </div>
+                <div class="landing_about_item">
+                    <a class="link" href="https://github.com/ANMillerIII/NLP-Equipment-Failure-Mitigation">
+                        <h3><span>Machine Learning & Natural Language Processing</span></h3>
+                    </a>
+                    <i>3 years experience</i>
+                    <p>Built various multi-label text-classification models (sklearn, NLTK, TensorFlow) for analysis of
+                        utility equipment to identify trends and deficiencies in utility maintenance programs.</p>
+                    <p>Applied knowledge of core-ML concepts such as model validation and sparse sampling and evaluated
+                        tradeoffs to refine and benchmark model performance on heavily imbalanced datasets.</p>
+                </div>
+                <div class="landing_about_item">
+                    <h3><span>SDLC, Agile, VCS and CI/CD</span></h3>
+                    <i>4+ years experience</i>
+                    <p>Team-oriented workstyle. Well-acquinted with Agile philosophies and workstyle, as well as more
+                        traditional management styles.</p>
+                    <p>Well-versed in SDLC best-practices, git, and a growing curiosity and understanding of continuous
+                        integration/development methods.</p>
+                </div>
+                <div class="landing_about_item">
+                    <a class="link" href="https://mpr.com/">
+                        <h3><span>Technical Consulting Experience</span></h3>
+                    </a>
+                    <i>2+ years experience</i>
+                    <p>Working at a boutique technical consulting firm in Washington D.C., consulting with management of
+                        large capital projects including the Department of Energy and National Science Foundation, in
+                        regards to project schedule and risk.</p>
+                    <p>Built trusted internal and external partnerships, executed a number of fast-paced efforts.</p>
+                </div>
+                <div class="landing_about_item">
+                    <a class="link" href="https://github.com/ANMillerIII/GIS-Risk">
+                        <h3><span>Geographical Information Systems (GIS)</span></h3>
+                    </a>
+                    <i>2 years experience</i>
+                    <p>Developed UI for utility asset management, specifically related to mitigation of wildfire risks
+                        using PostGIS, Postgres, as well as the Esri ArcGIS JavaScript API.</p>
+                    <p>Proficient in satellite image processing (LiDAR) and network analysis.</p>
+                </div>
+                <div class="landing_about_item">
+                    <h3><span>Multi-Disciplinary Technical Background</span></h3>
+                    <i>5+ years experience</i>
+                    <p>Graduated with a degree in Mechanical Engineering from the University of Connecticut in 2018.</p>
+                    <p>Developed expertise in Computational Fluid Dynamics, performing ventiliation system calculations
+                        for an energy storage systems provider directly used as the basis for saving millions in
+                        potetial regulatory-mandated retrofits.</p>
+                    <p>Applied knowledge of statistics, particullarly designing and executing Monte Carlo simulations
+                        for predictive analysis in various applications including equipment failure rates, project
+                        risk-based cost projections, and even neutronics (MCNP).</p>
+                </div>
+
+                <div class="landing_about_item">
+                    <a class="link" href="https://www.youtube.com/watch?v=ai6nz2hmtW8">
+                        <h3><span>A Love of People and Nature</span></h3>
+                    </a>
+                    <i>24 years experience</i>
+                    <p>Passionate about sustainability. Lived & worked on an organic farm for a year in college, doing
+                        community outreach.</p>
+                    <p>Through hiked the Appalachian and Pacific Crest Trails solo (summers of '17 and '18,
+                        respectively).</p>
+                </div>
+            </div>
         </div>
     </div>
 </div>
