--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
     <!-- Heading -->
     <div class="landing_heading ">
         <p id="name">Al Miller III</p>
-        <p id="subtitle"></p>
+        <p id="subtitle" class="fade_in_page_after">Software engineer passionate about holistic sustainability.</p>
     </div>
 
     <!-- Contact links -->
@@ -17,22 +17,22 @@
             <i id="modalClick" class="far fa-user-circle icon"></i>
         </div>
         <div class="contact_link">
-            <a href="https://www.linkedin.com/in/al-miller/">
+            <a href="https://www.linkedin.com/in/al-miller/" target="_blank">
                 <i class="fab fa-linkedin-in icon"></i>
             </a>
         </div>
         <div class="contact_link">
-            <a href="https://www.github.com/ANMillerIII/">
+            <a href="https://www.github.com/ANMillerIII/" target="_blank">
                 <i class="fab fa-github icon"></i>
             </a>
         </div>
         <div class="contact_link">
-            <a href="../static/assets/resume/resume_am.pdf" download="resume_am">
+            <a href="../static/assets/resume/resume_am.pdf" target="_blank" download="resume_am">
                 <i class="far fa-file-pdf-o icon"></i>
             </a>
         </div>
         <div class="contact_link">
-            <a href="mailto:albert.miller@uconn.edu">
+            <a href="mailto:albert.miller@uconn.edu" target="_blank">
                 <i class="material-icons icon">&#xe0e1;</i>
             </a>
         </div>
@@ -41,7 +41,7 @@
     <!-- About Al modal -->
     <div id="aboutModal" class="modal">
         <div class="modalContent">
-            <span class="closeModal">&times;</span>
+            <span class="closeModal" style="cursor: pointer;">&times;</span>
             <div class="landing_about">
                 <div class="landing_about_heading">
                     <p>
@@ -64,7 +64,13 @@
                     <p>Particular experience in AWS Lambda, EC2, DynamoDB, Amplify, CloudFront, and IAM.</p>
                 </div>
                 <div class="landing_about_item">
-                    <a class="link" href="https://github.com/ANMillerIII/NLP-Equipment-Failure-Mitigation">
+                    <h3><span>Front-End Development</span></h3>
+                    <i>2 years experience</i>
+                    <p>Proficient in JavaScript, React & redux, and responsive web-design in general.</p>
+                    <p>Solid background in design best-practices. Good eye for detail.</p>
+                </div>
+                <div class="landing_about_item">
+                    <a class="link" href="https://github.com/ANMillerIII/NLP-Equipment-Failure-Mitigation" target="_blank">
                         <h3><span>Machine Learning & Natural Language Processing</span></h3>
                     </a>
                     <i>3 years experience</i>
@@ -82,7 +88,7 @@
                         integration/development methods.</p>
                 </div>
                 <div class="landing_about_item">
-                    <a class="link" href="https://mpr.com/">
+                    <a class="link" href="https://www.mpr.com/" target="_blank">
                         <h3><span>Technical Consulting Experience</span></h3>
                     </a>
                     <i>2+ years experience</i>
@@ -92,7 +98,7 @@
                     <p>Built trusted internal and external partnerships, executed a number of fast-paced efforts.</p>
                 </div>
                 <div class="landing_about_item">
-                    <a class="link" href="https://github.com/ANMillerIII/GIS-Risk">
+                    <a class="link" href="https://github.com/ANMillerIII/GIS-Risk" target="_blank">
                         <h3><span>Geographical Information Systems (GIS)</span></h3>
                     </a>
                     <i>2 years experience</i>
@@ -112,8 +118,8 @@
                         risk-based cost projections, and even neutronics (MCNP).</p>
                 </div>
 
-                <div class="landing_about_item">
-                    <a class="link" href="https://www.youtube.com/watch?v=ai6nz2hmtW8">
+                <div class="landing_about_item" id="last_landing_about_item">
+                    <a class="link" href="https://www.youtube.com/watch?v=ai6nz2hmtW8" target="_blank">
                         <h3><span>A Love of People and Nature</span></h3>
                     </a>
                     <i>24 years experience</i>
