--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -42,8 +42,9 @@
 
     <body>
         <!-- p5.js imports for tree -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/addons/p5.dom.min.js"></script>
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/addons/p5.dom.min.js"></script> -->
+        <script src="{{ url_for('static', filename='./js/p5.min.js') }}"></script>
 
         <!-- mailgo import -->
         <script src="{{ url_for('static', filename='./js/mailgo.min.js') }}" defer></script>
