--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,7 +27,8 @@
             </a>
         </div>
         <div class="contact_link">
-            <a href="../static/assets/resume/resume_am.pdf" target="_blank" download="resume_am">
+            <a href="{{ url_for('static', filename='./assets/resume/resume_am.pdf') }}" target="_blank"
+                download="resume_am">
                 <i class="far fa-file-pdf-o icon"></i>
             </a>
         </div>
@@ -38,7 +39,7 @@
         </div>
     </div>
 
-    <!-- About Al modal -->
+    <!-- Modal -->
     <div id="aboutModal" class="modal">
         <div class="modalContent">
             <span class="closeModal" style="cursor: pointer;">&times;</span>
@@ -70,7 +71,8 @@
                     <p>Solid background in design best-practices. Good eye for detail.</p>
                 </div>
                 <div class="landing_about_item">
-                    <a class="link" href="https://github.com/ANMillerIII/NLP-Equipment-Failure-Mitigation" target="_blank">
+                    <a class="link" href="https://github.com/ANMillerIII/NLP-Equipment-Failure-Mitigation"
+                        target="_blank">
                         <h3><span>Machine Learning & Natural Language Processing</span></h3>
                     </a>
                     <i>3 years experience</i>
