--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -5,8 +5,6 @@
         {% block head %}
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&display=swap" rel="stylesheet">
 
-        <!-- <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet"> -->
-
         <title>Al Miller III</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,7 +17,7 @@
             crossorigin="anonymous" />
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
-        <!-- Contact links (FA and Material icons-->
+        <!-- Contact links (FA and Material icons) -->
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
