--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -84,7 +84,7 @@
                 <div class="landing_about_item">
                     <h3><span>SDLC, Agile, VCS and CI/CD</span></h3>
                     <i>4+ years experience</i>
-                    <p>Team-oriented workstyle. Well-acquinted with Agile philosophies and workstyle, as well as more
+                    <p>Team-oriented workstyle. Well-acquainted with Agile philosophies and workstyle, as well as more
                         traditional management styles.</p>
                     <p>Well-versed in SDLC best-practices, git, and a growing curiosity and understanding of continuous
                         integration/development methods.</p>
@@ -112,10 +112,10 @@
                     <h3><span>Multi-Disciplinary Technical Background</span></h3>
                     <i>5+ years experience</i>
                     <p>Graduated with a degree in Mechanical Engineering from the University of Connecticut in 2018.</p>
-                    <p>Developed expertise in Computational Fluid Dynamics, performing ventiliation system calculations
+                    <p>Developed expertise in Computational Fluid Dynamics, performing ventilation system calculations
                         for an energy storage systems provider directly used as the basis for saving millions in
-                        potetial regulatory-mandated retrofits.</p>
-                    <p>Applied knowledge of statistics, particullarly designing and executing Monte Carlo simulations
+                        potential regulatory-mandated retrofits.</p>
+                    <p>Applied knowledge of statistics, particularly designing and executing Monte Carlo simulations
                         for predictive analysis in various applications including equipment failure rates, project
                         risk-based cost projections, and even neutronics (MCNP).</p>
                 </div>
