--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -48,8 +48,8 @@
         {% endblock %}
         
         <!-- local JS imports for tree and modal -->
-        <script src="{{ url_for('static', filename='./js/main.js') }}"></script>
-        <script src="{{ url_for('static', filename='./js/modal.js') }}"></script>
+        <script src="{{ url_for('static', filename='./js/main.min.js') }}" defer></script>
+        <script src="{{ url_for('static', filename='./js/modal.min.js') }}"></script>
     </body>
 
 </html>
