--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -55,7 +55,7 @@
                     </p>
                 </div>
                 <div class="landing_about_item">
-                    <a class="link" href="https://github.com/ANMillerIII">
+                    <a class="link" href="https://github.com/ANMillerIII" target="_blank">
                         <h3><span>Cloud & Distributed Systems</span></h3>
                     </a>
                     <i>2 years experience</i>
