fixed mobile, added cloudfront invalidate

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -50,6 +50,7 @@
         <!-- local JS imports for tree and modal -->
         <script src="{{ url_for('static', filename='./js/main.min.js') }}" defer></script>
         <script src="{{ url_for('static', filename='./js/modal.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='./js/inobounce.min.js') }}"></script>
     </body>
 
 </html>
