--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -7,6 +7,7 @@
 html, body {
   overflow-x: hidden;
 }
+
 body {
   position: relative;
 }
@@ -22,6 +23,8 @@ html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar {
 canvas {
   width: 80%;
   height: 80%;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 /* Modal */
@@ -290,6 +293,12 @@ canvas {
 /* Smartphones (landscape) ----------- */
 
 @media only screen and (min-width: 321px) {
+  html, body {
+    overflow-x: hidden !important;
+  }
+  body {
+    position: relative !important;
+  }
   .landing_heading {
     margin-top: 2vw;
     font-size: 1px;
@@ -300,41 +309,49 @@ canvas {
   }
   .landing_about {
     display: block;
-    grid-auto-flow: row dense
+    grid-auto-flow: row dense;
   }
   .modalContent {
     max-width: 85%;
-    margin-bottom: 10vw;
+    margin-bottom: 13vw;
   }
 }
 
 /* Smartphones (portrait) ----------- */
 
 @media only screen and (max-width: 420px) {
-  .contact_link {
-    margin-left: 17px;
-  }
-  
   .landing_contact_links {
+    justify-content: center;
     padding: 1px;
-    margin-top: 13vh !important;
-    margin-left: -12vw !important;
+    margin-top: 11vh !important;
+    margin-left: -19vw !important;
   }
-  .landing_about {
+  .contact_link {
+    margin-left: 35px;
+    min-width: 50px !important;
+  }
+  /* .landing_about {
     display: block;
     grid-auto-flow: row dense;
-  }
+  } */
   .modalContent {
     max-width: 85% !important;
-    margin-bottom: 10vw;
+    margin-bottom: 15vw;
   }
+  /* Flexbox Styles */
+  .landing_contact_links {
+    display: flex !important;
+    flex-wrap: wrap !important;
+  }
+
 }
 
 /* Desktop ----------- */
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 500px) {
   .landing_contact_links {
-    margin-left: 2.16vw !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
   }
   .landing_about_heading, .landing_about_item {
     padding-right: 3vw;
