some mobile remaining, update readme

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,6 +10,8 @@
         <p id="name">Al Miller III</p>
         <p id="subtitle" class="fade_in_page_after">Software engineer passionate about holistic sustainability.</p>
     </div>
+    
+    <div id="sketch-div"></div>
 
     <!-- Contact links -->
     <div class="landing_contact_links">
