--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -288,6 +288,11 @@ canvas {
   padding-bottom: 7vh;
 }
 
+#sketch-div {
+  width: 50% !important;
+  height: 50% !important;
+}
+
 /* Smartphones (landscape) ----------- */
 
 @media only screen and (min-width: 321px) {
@@ -298,12 +303,12 @@ canvas {
     position: relative !important;
   } */
   .landing_heading {
-    margin-top: 2vw;
+    margin-top: 3vw !important;
     font-size: 1px;
   }
   .landing_contact_links {
-    margin-top: 16vh !important;
-    margin-left: 1vw;
+    margin-top: 3vh !important;
+    margin-left: 3vw !important;
   }
   .landing_about {
     display: block;
@@ -311,7 +316,10 @@ canvas {
   }
   .modalContent {
     max-width: 85%;
-    margin-bottom: 13vw;
+    margin-bottom: 13vh;
+  }
+  .canvas {
+    height: 15% !important;
   }
 }
 
@@ -319,14 +327,16 @@ canvas {
 
 @media only screen and (max-width: 420px) {
   .landing_contact_links {
-    justify-content: center;
+    /* justify-content: center; */
     padding: 1px;
-    margin-top: 11vh !important;
+    margin-top: 5vh !important;
     margin-left: -19vw !important;
+    justify-content: center !important;
   }
   .contact_link {
     margin-left: 35px;
     min-width: 50px !important;
+    /* margin-top: 5vw !important; */
   }
   /* .landing_about {
     display: block;
@@ -334,12 +344,18 @@ canvas {
   } */
   .modalContent {
     max-width: 85% !important;
-    margin-bottom: 15vw;
+    margin-bottom: 15vh;
   }
   /* Flexbox Styles */
   .landing_contact_links {
     display: flex !important;
     flex-wrap: wrap !important;
+    z-index: 999 !important;
+  }
+
+  .canvas {
+    height: 30% !important;
+    z-index: -1 !important;
   }
 
 }
