--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -74,7 +74,7 @@ canvas {
   -moz-animation: fadeIn ease 4s forwards;
   -o-animation: fadeIn ease 4s forwards;
   -ms-animation: fadeIn ease 4s forwards;
-  animation-delay: 9.25s;
+  animation-delay: 9.95s;
 }
 
 .fade_in_page_after {
@@ -84,7 +84,7 @@ canvas {
   -moz-animation: fadeIn ease 4s forwards;
   -o-animation: fadeIn ease 4s forwards;
   -ms-animation: fadeIn ease 4s forwards;
-  animation-delay: 10.3s;
+  animation-delay: 10.8s;
 }
 
 .rapid_fade_in {
@@ -179,9 +179,9 @@ canvas {
 
 .landing_contact_links {
   display: inline-flex;
-  align-self: top;
-  margin-top: 18vh !important;
-  justify-self: center;
+  align-self: center;
+  margin-top: 8vh !important;
+  justify-self: top;
   grid-column: 2;
   grid-row: 3;
 }
@@ -295,20 +295,13 @@ canvas {
 
 /* Smartphones (landscape) ----------- */
 
-@media only screen and (min-width: 321px) {
-  /* html, body {
-    overflow-x: hidden !important;
-  }
-  body {
-    position: relative !important;
-  } */
+@media only screen and (min-width: 321px) and (max-height: 500px) {
   .landing_heading {
-    margin-top: 3vw !important;
+    margin-top: 3vh !important;
     font-size: 1px;
   }
   .landing_contact_links {
-    margin-top: 3vh !important;
-    margin-left: 3vw !important;
+    margin-top: -14vh !important;
   }
   .landing_about {
     display: block;
@@ -326,22 +319,20 @@ canvas {
 /* Smartphones (portrait) ----------- */
 
 @media only screen and (max-width: 420px) {
+  .landing_heading {
+    margin-top: 4vh !important;
+  }
   .landing_contact_links {
-    /* justify-content: center; */
     padding: 1px;
-    margin-top: 5vh !important;
-    margin-left: -19vw !important;
+    margin-bottom: 19vh !important;
+    margin-left: -22vw !important;
     justify-content: center !important;
   }
   .contact_link {
     margin-left: 35px;
     min-width: 50px !important;
-    /* margin-top: 5vw !important; */
+    margin-top: 15px !important;
   }
-  /* .landing_about {
-    display: block;
-    grid-auto-flow: row dense;
-  } */
   .modalContent {
     max-width: 85% !important;
     margin-bottom: 15vh;
@@ -350,7 +341,6 @@ canvas {
   .landing_contact_links {
     display: flex !important;
     flex-wrap: wrap !important;
-    z-index: 999 !important;
   }
 
   .canvas {
